# ragcrawl

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: index.html
api/chunking/: index.html
api/core/: index.html
api/core/crawl-job/: index.html
api/core/sync-job/: index.html
api/export/: index.html
api/filters/: index.html
api/models/: index.html
api/models/chunk/: index.html
api/models/document/: index.html
api/models/page/: index.html
api/models/site/: index.html
api/storage/: index.html
api/storage/duckdb/: index.html
api/storage/dynamodb/: index.html
cli/: index.html
community/: index.html
community/changelog/: index.html
community/code-of-conduct/: index.html
community/contributing/: index.html
community/support/: index.html
configuration/: index.html
configuration/crawler/: index.html
configuration/markdown/: index.html
configuration/output/: index.html
configuration/storage/: index.html
docs/: gen_ref_pages.py  index.md
docs/api/: index.md
docs/api/chunking/: index.md
docs/api/core/: crawl-job.md  index.md  sync-job.md
docs/api/export/: index.md
docs/api/filters/: index.md
docs/api/models/: chunk.md  document.md  index.md  page.md  site.md
docs/api/storage/: duckdb.md  dynamodb.md  index.md
docs/cli/: index.md
docs/community/: changelog.md  code-of-conduct.md  contributing.md  index.md  support.md
docs/configuration/: crawler.md  index.md  markdown.md  output.md  storage.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/user-guide/: chunking.md  crawling.md  exporting.md  index.md  syncing.md
examples/: README.md  chunking_for_rag.py  dynamodb_setup.py  hooks_and_callbacks.py  quickstart_duckdb.py  sync_example.py
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/SUMMARY/: index.html
reference/ragcrawl/: index.html
reference/ragcrawl/chunking/: index.html
reference/ragcrawl/cli/: index.html
reference/ragcrawl/config/: index.html
reference/ragcrawl/core/: index.html
reference/ragcrawl/export/: index.html
reference/ragcrawl/extraction/: index.html
reference/ragcrawl/fetcher/: index.html
reference/ragcrawl/filters/: index.html
reference/ragcrawl/hooks/: index.html
reference/ragcrawl/models/: index.html
reference/ragcrawl/output/: index.html
reference/ragcrawl/storage/: index.html
reference/ragcrawl/sync/: index.html
reference/ragcrawl/utils/: index.html
search/: search_index.json
src/ragcrawl/: __init__.py
src/ragcrawl/chunking/: __init__.py  chunker.py  heading_chunker.py  token_chunker.py
src/ragcrawl/cli/: __init__.py  config_tui.py  main.py
src/ragcrawl/config/: __init__.py  crawler_config.py  markdown_config.py  output_config.py  storage_config.py  sync_config.py  user_config.py
src/ragcrawl/core/: __init__.py  crawl_job.py  frontier.py  scheduler.py  sync_job.py
src/ragcrawl/export/: __init__.py  events.py  exporter.py  json_exporter.py
src/ragcrawl/extraction/: __init__.py  extractor.py  link_extractor.py  metadata.py
src/ragcrawl/fetcher/: __init__.py  base.py  crawl4ai_fetcher.py  revalidation.py  robots.py
src/ragcrawl/filters/: __init__.py  link_filter.py  patterns.py  quality_gates.py  url_normalizer.py
src/ragcrawl/hooks/: __init__.py  callbacks.py
src/ragcrawl/models/: __init__.py  chunk.py  crawl_run.py  document.py  frontier_item.py  page.py  page_version.py  site.py
src/ragcrawl/output/: __init__.py  link_rewriter.py  multi_page.py  navigation.py  publisher.py  single_page.py
src/ragcrawl/storage/: __init__.py  backend.py
src/ragcrawl/sync/: __init__.py  change_detector.py  sitemap_parser.py  strategies.py
src/ragcrawl/utils/: __init__.py  hashing.py  (+2 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_duckdb_backend.py  test_export.py  test_output.py
tests/unit/: __init__.py  test_chunking.py  test_config.py  test_events.py  test_hashing.py  test_json_exporter.py  test_link_filter.py  test_metrics_logging.py  test_models.py  test_output_utils.py  test_patterns.py  test_project_metadata.py  test_quality_gates.py  test_single_page_publisher.py  test_storage_backend.py  test_url_normalizer.py
user-guide/: index.html
user-guide/chunking/: index.html
user-guide/crawling/: index.html
user-guide/exporting/: index.html
user-guide/syncing/: index.html
(+60 files in other folders)
