[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragcrawl"
version = "0.0.2"
description = "Recursive website crawler producing LLM-ready knowledge base artifacts with Crawl4AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Vamshi Rapolu", email = "vamshi.rapolu@gmail.com" }
]
keywords = [
    "crawler",
    "scraper",
    "llm",
    "rag",
    "knowledge-base",
    "markdown",
    "crawl4ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

dependencies = [
    "crawl4ai>=0.4.0",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "xxhash>=3.4.0",
    "tiktoken>=0.7.0",
    "aiofiles>=24.0.0",
    "tenacity>=8.0.0",
    "robotexclusionrulesparser>=1.7.0",
    "tldextract>=5.1.0",
    "yarl>=1.9.0",
    "click>=8.1.0",
    "textual>=0.85.0",
]

[project.optional-dependencies]
dynamodb = [
    "pynamodb>=6.0.0",
    "boto3>=1.34.0",
]
browser = [
    "playwright>=1.40.0",
]
all = [
    "ragcrawl[dynamodb,browser]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-snapshot>=0.9.0",
    "moto[dynamodb]>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0"
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[project.scripts]
ragcrawl = "ragcrawl.cli.main:app"

[project.urls]
Homepage = "https://github.com/vamshirapolu/ragcrawl"
Documentation = "https://vamshirapolu.github.io/ragcrawl"
Repository = "https://github.com/vamshirapolu/ragcrawl"
Issues = "https://github.com/vamshirapolu/ragcrawl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ragcrawl"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["ragcrawl"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "crawl4ai.*",
    "duckdb.*",
    "robotexclusionrulesparser.*",
    "tldextract.*",
    "tiktoken.*",
    "xxhash.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/ragcrawl"]
branch = true
omit = [
    "src/ragcrawl/cli/*",
    "src/ragcrawl/core/*",
    "src/ragcrawl/fetcher/*",
    "src/ragcrawl/extraction/*",
    "src/ragcrawl/sync/*",
    "src/ragcrawl/storage/dynamodb/*",
    "src/ragcrawl/hooks/*",
    "src/ragcrawl/chunking/token_chunker.py",
    "src/ragcrawl/chunking/chunker.py",
    "src/ragcrawl/storage/backend.py",
    "src/ragcrawl/storage/duckdb/backend.py",
    "src/ragcrawl/export/exporter.py",
    "src/ragcrawl/filters/patterns.py",
    "src/ragcrawl/filters/url_normalizer.py",
    "src/ragcrawl/output/navigation.py",
    "src/ragcrawl/output/multi_page.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
